src/snapshots/libflatterer__tests__full_test_inline-8.snap
---
source: src/lib.rs
expression: output

---
- "table_name,table_title"
- "main,main"
- "platforms,platforms"

