src/snapshots/libflatterer__tests__full_test_mixed_case-4.snap
---
source: src/lib.rs
expression: output

---
- "CREATE TABLE \"main\"("
- "    \"_link\" TEXT,"
- "    \"id\" NUMERIC,"
- "    \"title\" TEXT,"
- "    \"releasedate\" TIMESTAMP,"
- "    \"rating_code\" TEXT,"
- "    \"rating_code_\" TEXT);"
- ""
- "CREATE TABLE \"developer\"("
- "    \"_link\" TEXT,"
- "    \"_link_main\" TEXT,"
- "    \"name\" TEXT);"
- ""
- "CREATE TABLE \"platforms\"("
- "    \"_link\" TEXT,"
- "    \"_link_main\" TEXT,"
- "    \"name\" TEXT);"
- ""

