src/snapshots/libflatterer__tests__full_test_select-4.snap
---
source: src/lib.rs
expression: output

---
- "_link,id,rating_code,rating_name"
- "0,1,E,Everyone"
- "1,2,E,Everyone"

