src/snapshots/libflatterer__tests__games_platforms.csv-basic_in_object.json.snap
---
source: src/lib.rs
expression: lines
---
- - _link
  - _link_games
  - _link_main
  - name
- - 0.games.0.platforms.0
  - 0.games.0
  - "0"
  - PC
- - 0.games.1.platforms.0
  - 0.games.1
  - "0"
  - Xbox
- - 0.games.1.platforms.1
  - 0.games.1
  - "0"
  - Playstation

