src/snapshots/libflatterer__tests__illegal.json-data_package.json.snap
---
source: src/lib.rs
assertion_line: 1892
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
        - name: "\u0000"
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

