src/snapshots/libflatterer__tests__illegal.json-datapackage.json.snap
---
source: src/lib.rs
expression: "&value"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: main
    schema:
      fields:
        - name: _link
          title: _link
          type: integer
          format: integer
          count: 1
        - name: "\u0000"
          title: "\u0000"
          type: string
          format: string
          count: 1
      primaryKey: _link
    path: csv/main.csv

